# Template_MLOps_classification_e-commerce

./: .gitignore  Dockerfile  README.md  environment.yml  pyproject.toml  requirements.txt
.aws/: .aws_config  task-definition.json
.github/workflows/: aws.yml  dev-aws-deploy.yml
logs/: .gitignore  events.out.tfevents.1695115264.b3fd1e8153e8.298.0.v2  events.out.tfevents.1695115292.b3fd1e8153e8.298.1.v2  events.out.tfevents.1695115315.b3fd1e8153e8.298.2.v2  events.out.tfevents.1695115419.b3fd1e8153e8.298.3.v2
logs/train/: events.out.tfevents.1695292379.DESKTOP-M1HTKVF.62416.0.v2
models/: best_weights.json  best_weights.pkl  best_weigths.json  mapper.json  mapper.pkl  tokenizer_config.json
src/: main.py  predict.py  test_s3_access.py
src/api/: fastapi_main.py
src/api/aws_utils/: make_db.py
src/aws_utils/: make_db.py  s3_utils.py
src/data/: import_data.py  import_raw_data.py  make_dataset.py
src/features/: build_features.py
src/models/: Concatenate.py  Predict.py  image_vgg16.py  predict_model.py  text_lstm.py  train_model.py
src/preprocessing/: image_preprocessing.py  text_preprocessing.py
src/train_model/: main.py  predict.py
src/train_model/models/: best_weights.pkl  tokenizer_config.json  train_model.py
src/train_model/models/model_parameters/: mapper.json
src/train_model/models/notebooks/: Rakuten.ipynb
