[project]
name = "mar24cmlops-rakuten"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Jean Christophe CAZES", email = "cazes.jean.christophe@gmail.com" }
]
dependencies = [
    "fastapi>=0.111.0",
    "pandas>=2.2.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mar24cmlops_rakuten"]
